test/sema/initialize-non-null-pointer-with-null.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void main() {
    // CHECK: [[@LINE+1]]:14: error: cannot assign 'null' to 'int&' (add '?' to the type to make it nullable)
    int& p = null;
}
